--- a/src/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/UserBundle/Resources/views/Registration/register.html.twig
@@ -87,7 +87,7 @@
                     </tbody>
             </table>
         </div>
-        <div class="l-offset-10">
+        <div class="l-offset-10 l-12">
             <input id="_submit" type="submit" class="btn btn-success"  value="{{ 'registration.submit'|trans }}" />
         </div>
         {{ form_end( form ) }}
