--- a/src/UserBundle/Resources/public/css/main.css
+++ b/src/UserBundle/Resources/public/css/main.css
@@ -39,11 +39,17 @@ input#_submit:hover {
 }
 
 .bg-info {
-    background-color: #9acfea;
+    background-color: #F0F0F0;
     color: #286090;
-    padding: 10px;
-    border: 1px solid royalblue ;
+    /*padding: 5px;*/
+    border: 1px solid #F0F0D0 ;
     border-radius: 5px;
+}
+
+.step-configuration {
+    border-bottom: solid 1px black;
+    margin-bottom: 5%;
+    padding: 6% 0 6% 0;
 }
 
 .bg-danger {
@@ -58,10 +64,22 @@ input#_submit:hover {
     background-color: #152761;
 }
 
+.shadows {
+    text-shadow: black;
+}
+
+.box-shadows {
+    box-shadow: 1px 2px 3px;
+}
+
 .bg-grey {
     background-color: #F0F0D0;
     padding: 5px;
     border-radius: 5px;
+}
+
+.bg-grey > h3 {
+    text-shadow: 1px 1px chocolate;
 }
 
 .padding-ob {
