--- a/src/UserBundle/Resources/views/Registration/confirmed.html.twig
+++ b/src/UserBundle/Resources/views/Registration/confirmed.html.twig
@@ -1,80 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8" />
-    <title>{% block title %}Administration WOO!!!{% endblock %}</title>
-    {% block stylesheets %}
-        {% stylesheets 'bundles/user/css/*' filter='cssrewrite' %}
-        <link rel="stylesheet" href="{{ asset_url }}" />
-        {% endstylesheets %}
-    {% endblock stylesheets %}
-    {% block javascript %}
-        {% javascripts
-        'bundles/user/js/jquery-1.8.3.min.js'
-        'bundles/user/js/jquery-ui.min.js'
-        'bundles/user/js/jquery-1.9.1.js'
-        %}
-        <script src="{{ asset_url }}"></script>
-        {% endjavascripts %}
-        <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-    {% endblock javascript %}
-    <link rel="icon" type="image/x-icon" href="{{ asset('bundles/user/img/Setting-icon.png') }}" />
-</head>
-
-<body class="size-1140">
-<!-- TOP NAV WITH LOGO -->
-<header>
-    <nav>
-        <div class="line">
-            <div class="s-12 l-4">
-                <img class="s-12 l-12  logo" src={{ asset('bundles/user/img/adminlogo.png') }}>
-            </div>
-            <div class="top-nav l-8 s-12">
-                <p class="nav-text">Custom menu text</p>
-                <ul class="center">
-                    <li class="">
-                        <a href="{{ path( 'user_homepage' ) }}">Home</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-</header>
-<!-- ASIDE NAV AND CONTENT -->
-<div class="line">
-    <div class="box  margin-bottom">
-        <div class="margin">
-            <!-- CONTENT -->
-            {% block body %}
-                <div class="l-12 text-center">
-                    <h4 class="padding ">Successful! User "<b>{{ user.username }}</b>" registered <a href="{{ path('user_homepage') }}">Back to Main</a></h4>
-                </div>
-            {% endblock %}
-        </div>
+{% extends 'base.html.twig' %}
+{% block body %}
+    <div class="l-12 text-center">
+        <h4 class="padding ">Successful! User "<b>{{ user.username }}</b>" registered <a href="{{ path('homepage') }}">Back to Main</a></h4>
     </div>
-</div>
-<!-- FOOTER -->
-<footer class="box">
-    <div class="line">
-        <div class="s-12 l-6">
-            <p>Copyright 2017, Vision Design - graphic zoo</p>
-        </div>
-        <div class="s-12 l-6">
-            <a class="right" href="http://www.myresponsee.com" title="Responsee - lightweight responsive framework">Design and coding by Responsee Team</a>
-        </div>
-    </div>
-</footer>
-{#<script type="text/javascript" src="js/responsee.js"></script>#}
-
-
-{% block javascripts %}
-    {% javascripts
-    'bundles/user/js/responsee.js'
-    'bundles/user/js/bootstrap.js'
-    %}
-    <script src="{{ asset_url }}"></script>
-    {% endjavascripts %}
 {% endblock %}
-
-</body>
-</html>
