--- a/src/UserBundle/Resources/views/Users/Create/index.html.twig
+++ b/src/UserBundle/Resources/views/Users/Create/index.html.twig
@@ -6,52 +6,47 @@
 
             {{ form_start( form ) }}
 
-            <div class="left s-12 l-6 ">
-                <table >
-                    <tbody>
-                    <tr>
-                        <th>{{ form_label( form.username ) }}</th>
-                        <td>{{ form_widget( form.username ) }}</td>
-                    </tr>
-                    <tr>
-                        <th>{{ form_label( form.name ) }}</th>
-                        <td>{{ form_widget( form.name ) }}</td>
-                    </tr>
-                    <tr>
-                        <th>{{ form_label( form.surname ) }}</th>
-                        <td>{{ form_widget( form.surname ) }}</td>
-                    </tr>
-                    <tr>
-                        <th>{{ form_label( form.birthday) }}</th>
-                        <td>{{ form_widget( form.birthday ) }}</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="s-12 l-6 right margin-bottom">
-                <table>
-                    <tbody>
-                    <tr>
-                        <th>{{ form_label( form.email ) }}</th>
-                        <td>{{ form_widget( form.email ) }}</td>
-                        {{ form_errors( form.email ) }}
-                    </tr>
-                    <tr>
-                        <th>{{ form_label( form.plainPassword.first ) }}</th>
-                        <td>{{ form_widget( form.plainPassword.first ) }}</td>
-                    </tr>
-                    <tr>
-
-                        <th>{{ form_label( form.plainPassword.second ) }}</th>
-                        <td>{{ form_widget( form.plainPassword.second ) }}</td>
-                    </tr>
-                    <tr>
-                        <th>{{ form_label( form.gender) }}</th>
-                        <td>{{ form_widget( form.gender ) }}</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
+            <table class="table-responsive margin-bottom l-6">
+                <tbody>
+                {{ form_start( form ) }}
+                <tr>
+                    <th>{{ form_label( form.name ) }}</th>
+                    <td>{{ form_widget( form.name ) }}</td>
+                </tr>
+                <tr>
+                    <th>{{ form_label( form.surname ) }}</th>
+                    <td>{{ form_widget( form.surname ) }}</td>
+                </tr>
+                <tr>
+                    <th>{{ form_label( form.status ) }}</th>
+                    <td>{{ form_widget( form.status ) }}</td>
+                </tr>
+                <tr>
+                    <th>{{ form_label( form.born ) }}</th>
+                    <td>{{ form_widget( form.born ) }}</td>
+                </tr>
+                </tbody>
+            </table>
+            <table class="table-responsive margin-bottom l-6">
+                <tbody>
+                <tr>
+                    <th>{{ form_label( form.email ) }}</th>
+                    <td>{{ form_widget( form.email ) }}</td>
+                </tr>
+                <tr>
+                    <th>{{ form_label( form.country ) }}</th>
+                    <td>{{ form_widget( form.country ) }}</td>
+                </tr>
+                <tr>
+                    <th>{{ form_label( form.city ) }}</th>
+                    <td>{{ form_widget( form.city ) }}</td>
+                </tr>
+                <tr>
+                    <th>{{ form_label( form.gender ) }}</th>
+                    <td>{{ form_widget( form.gender ) }}</td>
+                </tr>
+                </tbody>
+            </table>
             <div class="l-12 text-center ">
                 <input type="submit" class="btn btn-success right  " value="Create">
                 <a href="{{ path('user_homepage') }}" class="btn btn-info right ">Home</a>
