--- a/src/UserBundle/Resources/views/Users/Aside/aside.html.twig
+++ b/src/UserBundle/Resources/views/Users/Aside/aside.html.twig
@@ -1,10 +1,21 @@
-    <aside class="s-12 l-3 bg-grey">
+    <aside class="s-12 l-2 bg-grey box-shadows">
         <h3 class="text-center">Sort</h3>
         <div class="aside-nav">
             <ul>
                 <li><a href="{{ path( "show_all_users", { "page" : current_page, "sort" : 'name' } ) }}">Name</a></li>
                 <li><a href="{{ path( "show_all_users", { "page" : current_page, "sort" : 'surname' } ) }}">Surname</a></li>
-                <li><a href="{{ path( "show_all_users", { "page" : current_page, "sort" : 'birthday' } ) }}">Birthday</a></li>
+                <li><a href="{{ path( "show_all_users", { "page" : current_page, "sort" : 'born' } ) }}">Born</a></li>
+                <li>
+                    <a>Status</a>
+                    <ul>
+                        <li>
+                            <a>Married</a>
+                        </li>
+                        <li>
+                            <a>Married</a>
+                        </li>
+                    </ul>
+                </li>
                 <li>
                     <a>Gender</a>
                     <ul>
