--- a/src/UserBundle/Resources/views/Users/Edit/index.html.twig
+++ b/src/UserBundle/Resources/views/Users/Edit/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block body %}
     <h3 class="text-center">Edit user</h3>
-    <table class="table-responsive margin-bottom">
+    <table class="table-responsive margin-bottom l-6">
         <tbody>
         {{ form_start( edit_form ) }}
         <tr>
@@ -13,16 +13,32 @@
             <td>{{ form_widget( edit_form.surname ) }}</td>
         </tr>
         <tr>
-            <th>{{ form_label( edit_form.username ) }}</th>
-            <td>{{ form_widget( edit_form.username ) }}</td>
+            <th>{{ form_label( edit_form.status ) }}</th>
+            <td>{{ form_widget( edit_form.status ) }}</td>
         </tr>
+        <tr>
+            <th>{{ form_label( edit_form.born ) }}</th>
+            <td>{{ form_widget( edit_form.born ) }}</td>
+        </tr>
+        </tbody>
+    </table>
+    <table class="table-responsive margin-bottom l-6">
+        <tbody>
         <tr>
             <th>{{ form_label( edit_form.email ) }}</th>
             <td>{{ form_widget( edit_form.email ) }}</td>
         </tr>
         <tr>
-            <th>{{ form_label( edit_form.birthday ) }}</th>
-            <td>{{ form_widget( edit_form.birthday ) }}</td>
+            <th>{{ form_label( edit_form.country ) }}</th>
+            <td>{{ form_widget( edit_form.country ) }}</td>
+        </tr>
+        <tr>
+            <th>{{ form_label( edit_form.city ) }}</th>
+            <td>{{ form_widget( edit_form.city ) }}</td>
+        </tr>
+        <tr>
+            <th>{{ form_label( edit_form.gender ) }}</th>
+            <td>{{ form_widget( edit_form.gender ) }}</td>
         </tr>
         </tbody>
     </table>
