--- a/src/ConfigurationBundle/Resources/views/Admin/index.html.twig
+++ b/src/ConfigurationBundle/Resources/views/Admin/index.html.twig
@@ -60,8 +60,8 @@
             </div>
         </div>
         <div class="l-12 ">
-            <input type="submit" class="btn btn-success right  navbar-inverse" value="Next">
-            <a href="{{ path('configuration_database') }}" class="btn btn-warning right  navbar-inverse">Previust</a>
+            <input type="submit" class="button rounded-btn right" value="Next">
+            <a href="{{ path('configuration_database') }}" class="button rounded-btn right margin-button">Previust</a>
         </div>
     </div>
     {{ form_end( form ) }}
