--- a/src/ConfigurationBundle/Resources/views/Homepage/aside_homepage.html.twig
+++ b/src/ConfigurationBundle/Resources/views/Homepage/aside_homepage.html.twig
@@ -30,9 +30,9 @@
             </div>
         </div>
         <script>
-            $JQuery =$.noConflict();
-            $JQuery(document).ready(function(){
-                $JQuery('.owl-carousel').owlCarousel({
+            $JQ =$.noConflict();
+            $JQ(document).ready(function(){
+                $JQ('.owl-carousel').owlCarousel({
                     items:1,
                     loop:true,
                     autoplay:true,
