--- a/src/UserBundle/Resources/views/Users/Aside/aside.html.twig
+++ b/src/UserBundle/Resources/views/Users/Aside/aside.html.twig
@@ -9,10 +9,10 @@
                     <a>Status</a>
                     <ul>
                         <li>
-                            <a>Married</a>
+                            <a href="{{ path( "") }}">Married</a>
                         </li>
                         <li>
-                            <a>Married</a>
+                            <a>Not Married</a>
                         </li>
                     </ul>
                 </li>
