--- a/src/UserBundle/Resources/views/Users/Create/index.html.twig
+++ b/src/UserBundle/Resources/views/Users/Create/index.html.twig
@@ -25,6 +25,10 @@
                     <th>{{ form_label( form.born ) }}</th>
                     <td>{{ form_widget( form.born ) }}</td>
                 </tr>
+                <tr>
+                    <th>{{ form_label( form.profession ) }}</th>
+                    <td>{{ form_widget( form.profession ) }}</td>
+                </tr>
                 </tbody>
             </table>
             <table class="table-responsive margin-bottom l-6">
@@ -44,6 +48,9 @@
                 <tr>
                     <th>{{ form_label( form.gender ) }}</th>
                     <td>{{ form_widget( form.gender ) }}</td>
+                </tr>
+                <tr>
+                    <td></td>
                 </tr>
                 </tbody>
             </table>
