--- a/src/UserBundle/Resources/views/Users/Delete/index.html.twig
+++ b/src/UserBundle/Resources/views/Users/Delete/index.html.twig
@@ -2,7 +2,7 @@
 {% block body %}
     <h3 class="text-center bg-grey"> User "{{ user_name }}" was removed!</h3>
     <div class="text-center">
-        <a class="btn btn-info" href="{{ path( "user_homepage" ) }}">Main</a>
-        <a class="btn btn-info" href="{{ path( "show_all_users" ) }}">Edit User</a>
+        <a class="button rounded-btn submit-btn" href="{{ path( "user_homepage" ) }}">Main</a>
+        <a class="button rounded-btn reload-btn" href="{{ path( "show_all_users" ) }}">Edit User</a>
     </div>
 {% endblock %}
