--- a/src/UserBundle/Resources/views/Users/ShowAllUsers/pagination.html.twig
+++ b/src/UserBundle/Resources/views/Users/ShowAllUsers/pagination.html.twig
@@ -1,10 +1,10 @@
 <span class="l-12 bg-grey pagination pagination-sm">
     <div class="text-center l-9">
-        <a class="btn-sm cl-pagination" href="{{ path("show_all_users", { "page" : "0" , "sort" : sort}) }}"> &#171;1 </a>
-        <a class="padding-ob" href="{% if current_page  != 0 %} {{ path("show_all_users", { "page" : current_page - 1, "sort" : sort }) }} {% endif %}">  <b> < </b>  </a>
-        <b class="btn-sm btn-info">{{ current_page + 1 }}</b>
-        <a class="padding-ob" href="{% if current_page  != count - 1 %} {{ path("show_all_users", { "page" : current_page + 1, "sort" : sort }) }} {% endif %}"> <b> ></b> </a>
-        <a class="btn-sm cl-pagination" href="{{ path("show_all_users", { "page" : count -1, "sort" : sort }) }}"> {{ count  }}&#187; </a>
+        <a class="button rounded-full-btn cl-pagination pagination" href="{{ path("show_all_users", { "page" : "0" , "sort" : sort}) }}"> 1 </a>
+        <a class=" padding-ob" href="{% if current_page  != 0 %} {{ path("show_all_users", { "page" : current_page - 1, "sort" : sort }) }} {% endif %}">  <b> <i class="icon-arrow_big_left cl-olivie"></i> </b>  </a>
+        <b class="button reload-btn pagination">{{ current_page + 1 }}</b>
+        <a class="padding-ob " href="{% if current_page  != count - 1 %} {{ path("show_all_users", { "page" : current_page + 1, "sort" : sort }) }} {% endif %}"> <b> <i class="icon-arrow_big_right cl-olivie"></i> </b> </a>
+        <a class="button rounded-full-btn cl-pagination pagination" href="{{ path("show_all_users", { "page" : count -1, "sort" : sort }) }}"> {{ count  }} </a>
     </div>
     <div class=" l-3">
         <p class="right cl-olivie"> All Pages: <strong> {{ count  }} </strong></p>
