--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -74,8 +74,15 @@
                                 {#{% endif %}#}
                             </form>
                         {% endif %}
-
                         <li>
+                            <a href="{{ path( 'facebook_login' ) }}"><i class="icon-facebook"></i></a>
+                        </li>
+                        <li>
+                            <a href="{{ path( 'vkontakte_login' ) }}"><i class="">VK</i></a>
+                        </li>
+                        <li>
+                            {#<a><i class="icon-google_plus"></i></a>#}
+                        </li>
                     </ul>
                 </div>
             </div>
